--- a/index.html
+++ b/index.html
@@ -21,68 +21,69 @@
         
     </div>
     <div id="plateau">
-        <table>
-            <tbody><tr>
-                <td><img id="1:1" src="image/case_tn.png" ></td>
-                <td><img id="1:2"  src="image/case_tn.png" ></td>
-                <td><img id="1:3" src="image/case_tn.png" ></td>
-                <td><img id="1:4" src="image/case_tn.png" ></td>
-                <td><img  id="1:5"src="image/case_tn.png" ></td>
-                <td><img id="1:6" src="image/case_tn.png" ></td>
-                <td><img id="1:7"src="image/case_tn.png" ></td>
+        <table id="myTable">
+            <tbody><tr id="col1" >
+                <td id="truc"></td> 
+                <td id="1:2"></td>  
+                <td id="1:3"></td>
+                <td id="1:4"></td>
+                <td id="1:5"></td>
+                <td id="1:6" ></td>
+                <td id="1:7"></td>
             </tr>
-            <tr>
-                <td> <img id="2:1"src="image/case_tn.png" ></td>
-                <td><img  id="2:2"src="image/case_tn.png" ></td>
-                <td><img  id="2:3"src="image/case_tn.png" ></td>
-                <td><img id="2:4"src="image/case_tn.png" ></td>
-                <td><img id="2:5"src="image/case_tn.png" ></td>
-                <td><img id="2:6"src="image/case_tn.png" ></td>
-                <td><img id="2:7"src="image/case_tn.png" ></td>
+            <tr id="col2">
+                <td  id="2:1"></td>
+                <td  id="2:2"></td>
+                <td  id="2:3"></td>
+                <td id="2:4"></td>
+                <td id="2:5"></td>
+                <td id="2:6"></td>s
+                <td id="2:7"></td>
             </tr>
-            <td><img  id="3:1"src="image/case_tn.png" ></td>
-            <td><img id="3:2" src="image/case_tn.png" ></td>
-            <td><img id="3:3"src="image/case_tn.png" ></td>
-            <td><img id="3:4"src="image/case_tn.png" ></td>
-            <td><img id="3:5"src="image/case_tn.png" ></td>
-            <td><img id="3:6"src="image/case_tn.png" ></td>
-            <td><img id="3:7"src="image/case_tn.png" ></td>
+            <tr id="col3">
+            <td  id="3:1"></td>
+            <td id="3:2"> </td>
+            <td id="3:3"></td>
+            <td id="3:4"></td>
+            <td id="3:5"></td>
+            <td id="3:6"></td>
+            <td id="3:7"></td>
         </tr>
-        <tr>
-            <td><img  id="4:1"src="image/case_tn.png" > </td>
-            <td><img id="4:2"src="image/case_tn.png" ></td>
-            <td><img id="4:3"src="image/case_tn.png" ></td>
-            <td><img id="4:4"src="image/case_tn.png" ></td>
-            <td><img id="4:5"src="image/case_tn.png" ></td>
-            <td><img id="4:6"src="image/case_tn.png" ></td>
-            <td><img id="4:7"src="image/case_tn.png" ></td>
+        <tr id="col4">
+            <td  id="4:1"></td>
+            <td id="4:2"></td>
+            <td id="4:3"></td>
+            <td id="4:4"></td>
+            <td id="4:5"></td>
+            <td id="4:6"></td>
+            <td id="4:7"></td>
         </tr>
-        <tr>
-            <td><img id="5:1"src="image/case_tn.png" ></td>
-            <td><img id="5:2"src="image/case_tn.png" ></td>
-            <td><img id="5:3"src="image/case_tn.png" ></td>
-            <td><img id="5:4"src="image/case_tn.png" ></td>
-            <td><img id="5:5"src="image/case_tn.png" ></td>
-            <td><img id="5:6"src="image/case_tn.png" ></td>
-            <td><img id="5:7"src="image/case_tn.png" ></td>
+        <tr id="col5">
+            <td id="5:1"></td>
+            <td id="5:2"></td>
+            <td id="5:3"></td>
+            <td id="5:4"></td>
+            <td id="5:5"></td>
+            <td id="5:6"></td>
+            <td id="5:7"></td>
         </tr>
-        <tr>
-            <td><img id="6:1"src="image/case_tn.png" > </td>
-            <td><img id="6:2"src="image/case_tn.png" ></td>
-            <td><img  id="6:3"src="image/case_tn.png" ></td>
-            <td><img  id="6:4"src="image/case_tn.png" ></td>
-            <td><img id="6:5"src="image/case_tn.png" ></td>
-            <td><img id="6:6"src="image/case_tn.png" ></td>
-            <td><img id="6:7"src="image/case_tn.png" ></td>
+        <tr id="col6">
+            <td  id="6:1"></td> 
+            <td  id="6:2"></td>
+            <td  id="6:3"></td>
+            <td   id="6:4"></td>
+            <td  id="6:5"></td>
+            <td  id="6:6"></td>
+            <td id="6:7"></td>
         </tr>
-        <tr>
-            <td><img  id="7:1"src="image/case_tn.png" > </td>
-            <td><img id="7:2"src="image/case_tn.png" ></td>
-            <td><img id="7:3"src="image/case_tn.png" ></td>
-            <td><img  id="7:4"src="image/case_tn.png" ></td>
-            <td><img id="7:5"src="image/case_tn.png" ></td>
-            <td><img id="7:6"src="image/case_tn.png" ></td>
-            <td><img id="7:7"src="image/case_tn.png" ></td>
+        <tr id="col7">
+            <td  id="7:1"></td> 
+            <td id="7:2"></td>
+            <td id="7:3"></td>
+            <td  id="7:4"></td>
+            <td id="7:5"></td>
+            <td id="7:6"></td>
+            <td id="7:7"></td>
         </tr>
     </tbody>
 </table>
