som 4 try tests ok

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <title>puissance 4 version Table</title>
 </head>
-<body>
+<body onload="startGame();">
     <h1>PUISSANCE 4</h1>
+    
     <div id="colorTurn">Tour : Joueur 1</div>
+    <!-- <button id="begingame" onclick="startGame();">Commencer</button> -->
     <div id="grid">
         <div class="row">
             <div class="cell" id="cell00" onclick="selectColumn(0)"></div>
